--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#">Google Plus</a>
     </div>
     <header>
-      <div class="wrapper clearfix">
+      <div class="wrapper">
         <div id="logo">
           <h1>Exceptional</h1>
           <h2>Realty Group</h2>
@@ -33,7 +33,6 @@
       </div>
       <!-- .wrapper -->
     </header>
-
     <div class="wrapper clearfix">
       <section id="featured-property" class="col-3 first">
         <figure>
@@ -82,19 +81,19 @@
         </figure>
       </section>
 
-      <section id="news" class="col-1 first">
+      <section id="news" class="col-1">
         <h3>Company News</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui iste
-          iure aut ad asperiores perspiciatis fuga eum odio sint architecto quam
-          laborum, quod omnis rerum reiciendis quis nulla hic velit.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus,
+          nobis, tempore recusandae culpa deleniti dignissimos laborum
+          perspiciatis exercitationem obcaecati dolores unde eveniet eius
+          debitis perferendis provident porro. Ipsum, placeat.
         </p>
       </section>
     </div>
     <!-- .wrapper -->
-
-    <section id="details">
-      <div class="wrapper .clearfix">
+    <section id="details clearfix">
+      <div class="wrapper">
         <div class="col-1 first">
           <h3>Contact</h3>
           <p>
@@ -133,10 +132,8 @@
       <!-- .wrapper -->
     </section>
 
-    <div class="wrapper">
-      <footer>
-        &copy; 2014 Exceptional Realty. All Rights Reserved.
-      </footer>
-    </div>
+    <footer>
+      &copy; 2014 Exceptional Realty. All Rights Reserved.
+    </footer>
   </body>
 </html>
