--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <div id="social">
     <a href="#">Twitter</a>
     <a href="#">Facebook</a>
-    <a href="#">Google plus</a>
-
+    <a href="#">Google Plus</a>
   </div>
   <header>
     <div class="wrapper">
@@ -27,8 +26,9 @@
           href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a
           href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
-    </div>
+    </div><!-- .wrapper -->
   </header>
+
   <div class="wrapper clearfix">
     <section id="featured-property" class="col-3 first">
       <figure>
@@ -38,16 +38,12 @@
 
       <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur
         doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae
-        totam.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla
-        vitae
-        omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas
-        nisi.
-      </p>
+        totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis
+        nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident
+        voluptas nisi.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti
         dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis
-        provident
-        porro. Ipsum, placeat.</p>
+        provident porro. Ipsum, placeat.</p>
     </section>
 
     <section id="promotional" class="col-2 first">
@@ -56,26 +52,23 @@
           <source src="videos/real-estate.mp4" type="video/mp4">
           <source src="videos/real-estate.ogv" type="video/ogg">
           Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade
-            your
-            browser</a>.
+            your browser</a>.
         </video>
         <figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
       </figure>
     </section>
+
     <section id="news" class="col-1">
       <h3>Company News</h3>
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-        a
-        type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
-        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
-        of Lorem Ipsum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, inventore, vero, rerum ullam nihil
+        sapiente tempora molestias quis ducimus ipsum laborum vel. Tempore perspiciatis ea error dignissimos libero
+        recusandae explicabo.</p>
     </section>
-  </div>
+  </div><!-- .wrapper -->
+
   <section id="details">
     <div class="wrapper clearfix">
-      <di class="col-1 first">
+      <div class="col-1 first">
         <h3>Contact</h3>
         <p>
           email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -87,26 +80,26 @@
           P.O.Box 5555<br>
           Brooklyn, NY 11201
         </address>
-    </div>
+      </div>
 
-    <div class="col-1">
-      <h3>Links</h3>
-      <p>
-        <a href="#" target="_blank">Home Restoration</a><br>
-        <a href="#" target="_blank">Afordable Mortgages</a><br>
-        <a href="#" target="_blank">Professional Moving Crew</a>
-      </p>
-    </div>
+      <div class="col-1">
+        <h3>Links</h3>
+        <p>
+          <a href="#" target="_blank">Home Restoration</a><br>
+          <a href="#" target="_blank">Afordable Mortgages</a><br>
+          <a href="#" target="_blank">Professional Moving Crew</a>
+        </p>
+      </div>
 
-    <div class="col-1">
-      <h3>Follow</h3>
-      <p>
-        <a href="#" target="_blank">Youtube</a><br>
-        <a href="#" target="_blank">Facebook</a><br>
-        <a href="#" target="_blank">Twitter</a>
-      </p>
-    </div>
-    </div>
+      <div class="col-1">
+        <h3>Follow</h3>
+        <p>
+          <a href="#" target="_blank">Youtube</a><br>
+          <a href="#" target="_blank">Facebook</a><br>
+          <a href="#" target="_blank">Twitter</a>
+        </p>
+      </div>
+    </div><!-- .wrapper -->
   </section>
 
   <footer>
